docker/kubernetes/jw-glial.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jw-glial
  labels:
    app: jw-glial
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jw-glial
  template:
    metadata:
      labels:
        app: jw-glial
    spec:
      containers:
      - name: jw-glial
        image: jeldwen-glial
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: jw-glial
  labels:
    app: jw-glial
spec:
  ports:
    - name: jw-glial-http
      port: 80
  selector:
    app: jw-glial
  type: NodePort
