docker/kubernetes/mysql.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: bind0000-mysql
          imagePullPolicy: Never
          volumeMounts:
          - name: mysql-persistent-storage
            mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  annotations:
    metallb.universe.tf/allow-shared-ip: shared-ip
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
      name: mysql
  selector:
    app: mysql
  type: LoadBalancer
